# AMP_Project

./: .gitignore  Dockerfile  README.md  commands  nebula_commands
notes/: commands  hydra_commands
project_skeleton/: CMakeLists.txt  Makefile  README  bench.sh  benchmark_results.csv  results_ex4.csv  run_nebula.sh  small_bench.sh
project_skeleton/build-cmake/: CMakeCache.txt  CTestTestfile.cmake  Makefile  benchmark_ex1  benchmark_ex2  benchmark_ex4  benchmark_ex5  cmake_install.cmake  test_ex1_queue  test_ex2_concurrent  test_ex4_twolocks  test_ex5_lockfree
project_skeleton/build-cmake/Testing/Temporary/: CTestCostData.txt
project_skeleton/data/2025-11-05T11:44:34/avg/: smallbench_10.data  smallbench_100.data
project_skeleton/data/2026-01-12T00:39:10/csv/: ex1_seq_p1_b1000_s1_r10.csv  ex1_seq_p1_b1000_s5_r10.csv  ex1_seq_p1_b1_s1_r10.csv  ex1_seq_p1_b1_s5_r10.csv  ex2_a_p10_b1000_s1_r10.csv  ex2_a_p10_b1_s1_r10.csv  ex2_a_p1_b1000_s1_r10.csv  ex2_a_p1_b1_s1_r10.csv  ex2_a_p20_b1000_s1_r10.csv  ex2_a_p20_b1_s1_r10.csv  ex2_a_p2_b1000_s1_r10.csv  ex2_a_p2_b1_s1_r10.csv  ex2_a_p32_b1000_s1_r10.csv  ex2_a_p32_b1_s1_r10.csv  ex2_a_p45_b1000_s1_r10.csv  ex2_a_p45_b1_s1_r10.csv  ex2_a_p64_b1000_s1_r10.csv  ex2_a_p64_b1_s1_r10.csv  ex2_a_p8_b1000_s1_r10.csv  ex2_a_p8_b1_s1_r10.csv  ex2_b_p10_b1000_s1_r10.csv  ex2_b_p10_b1_s1_r10.csv  ex2_b_p1_b1000_s1_r10.csv  ex2_b_p1_b1_s1_r10.csv  ex2_b_p20_b1000_s1_r10.csv  ex2_b_p20_b1_s1_r10.csv  ex2_b_p2_b1000_s1_r10.csv  ex2_b_p2_b1_s1_r10.csv  ex2_b_p32_b1000_s1_r10.csv  ex2_b_p32_b1_s1_r10.csv  ex2_b_p45_b1000_s1_r10.csv  ex2_b_p45_b1_s1_r10.csv  ex2_b_p64_b1000_s1_r10.csv  ex2_b_p64_b1_s1_r10.csv  ex2_b_p8_b1000_s1_r10.csv  ex2_b_p8_b1_s1_r10.csv  ex2_c_p10_b1000_s1_r10.csv  ex2_c_p10_b1_s1_r10.csv  ex2_c_p1_b1000_s1_r10.csv  ex2_c_p1_b1_s1_r10.csv  (+156 more)
project_skeleton/data/2026-01-12T15:07:21/csv/: ex1_seq_p1_b1000_s1_r10.csv  ex1_seq_p1_b1000_s5_r10.csv  ex1_seq_p1_b1_s1_r10.csv  ex1_seq_p1_b1_s5_r10.csv  ex2_a_p10_b1000_s1_r10.csv  ex2_a_p10_b1_s1_r10.csv  ex2_a_p1_b1000_s1_r10.csv  ex2_a_p1_b1_s1_r10.csv  ex2_a_p20_b1000_s1_r10.csv  ex2_a_p20_b1_s1_r10.csv  ex2_a_p2_b1000_s1_r10.csv  ex2_a_p2_b1_s1_r10.csv  ex2_a_p32_b1000_s1_r10.csv  ex2_a_p32_b1_s1_r10.csv  ex2_a_p45_b1000_s1_r10.csv  ex2_a_p45_b1_s1_r10.csv  ex2_a_p64_b1000_s1_r10.csv  ex2_a_p64_b1_s1_r10.csv  ex2_a_p8_b1000_s1_r10.csv  ex2_a_p8_b1_s1_r10.csv  ex2_b_p10_b1000_s1_r10.csv  ex2_b_p10_b1_s1_r10.csv  ex2_b_p1_b1000_s1_r10.csv  ex2_b_p1_b1_s1_r10.csv  ex2_b_p20_b1000_s1_r10.csv  ex2_b_p20_b1_s1_r10.csv  ex2_b_p2_b1000_s1_r10.csv  ex2_b_p2_b1_s1_r10.csv  ex2_b_p32_b1000_s1_r10.csv  ex2_b_p32_b1_s1_r10.csv  ex2_b_p45_b1000_s1_r10.csv  ex2_b_p45_b1_s1_r10.csv  ex2_b_p64_b1000_s1_r10.csv  ex2_b_p64_b1_s1_r10.csv  ex2_b_p8_b1000_s1_r10.csv  ex2_b_p8_b1_s1_r10.csv  ex2_c_p10_b1000_s1_r10.csv  ex2_c_p10_b1_s1_r10.csv  ex2_c_p1_b1000_s1_r10.csv  ex2_c_p1_b1_s1_r10.csv  (+156 more)
project_skeleton/data/2026-01-13T13:54:12/csv/: ex1_seq_p1_b1000_s1_r10.csv  ex1_seq_p1_b1000_s5_r10.csv  ex1_seq_p1_b1_s1_r10.csv  ex1_seq_p1_b1_s5_r10.csv  ex2_a_p10_b1000_s1_r10.csv  ex2_a_p10_b1_s1_r10.csv  ex2_a_p1_b1000_s1_r10.csv  ex2_a_p1_b1_s1_r10.csv  ex2_a_p20_b1000_s1_r10.csv  ex2_a_p20_b1_s1_r10.csv  ex2_a_p2_b1000_s1_r10.csv  ex2_a_p2_b1_s1_r10.csv  ex2_a_p32_b1000_s1_r10.csv  ex2_a_p32_b1_s1_r10.csv  ex2_a_p45_b1000_s1_r10.csv  ex2_a_p45_b1_s1_r10.csv  ex2_a_p64_b1000_s1_r10.csv  ex2_a_p64_b1_s1_r10.csv  ex2_a_p8_b1000_s1_r10.csv  ex2_a_p8_b1_s1_r10.csv  ex2_b_p10_b1000_s1_r10.csv  ex2_b_p10_b1_s1_r10.csv  ex2_b_p1_b1000_s1_r10.csv  ex2_b_p1_b1_s1_r10.csv  ex2_b_p20_b1000_s1_r10.csv  ex2_b_p20_b1_s1_r10.csv  ex2_b_p2_b1000_s1_r10.csv  ex2_b_p2_b1_s1_r10.csv  ex2_b_p32_b1000_s1_r10.csv  ex2_b_p32_b1_s1_r10.csv  ex2_b_p45_b1000_s1_r10.csv  ex2_b_p45_b1_s1_r10.csv  ex2_b_p64_b1000_s1_r10.csv  ex2_b_p64_b1_s1_r10.csv  ex2_b_p8_b1000_s1_r10.csv  ex2_b_p8_b1_s1_r10.csv  ex2_c_p10_b1000_s1_r10.csv  ex2_c_p10_b1_s1_r10.csv  ex2_c_p1_b1000_s1_r10.csv  ex2_c_p1_b1_s1_r10.csv  (+156 more)
project_skeleton/data/smallbench/: small_bench_ex1.csv  small_bench_ex2.csv  small_bench_ex4.csv  small_bench_ex5.csv
project_skeleton/data/smallbench/csv/: ex1_seq_p1_b1_s1_r2.csv  ex2_a_p10_b1_s1_r2.csv  ex2_a_p1_b1_s1_r2.csv  ex2_a_p20_b1_s1_r2.csv  ex2_a_p2_b1_s1_r2.csv  ex2_a_p32_b1_s1_r2.csv  ex2_a_p45_b1_s1_r2.csv  ex2_a_p64_b1_s1_r2.csv  ex2_a_p8_b1_s1_r2.csv  ex4_a_p10_b1_s1_r2.csv  ex4_a_p1_b1_s1_r2.csv  ex4_a_p20_b1_s1_r2.csv  ex4_a_p2_b1_s1_r2.csv  ex4_a_p32_b1_s1_r2.csv  ex4_a_p45_b1_s1_r2.csv  ex4_a_p64_b1_s1_r2.csv  ex4_a_p8_b1_s1_r2.csv  ex5_a_p10_b1_s1_r2.csv  ex5_a_p1_b1_s1_r2.csv  ex5_a_p20_b1_s1_r2.csv  ex5_a_p2_b1_s1_r2.csv  ex5_a_p32_b1_s1_r2.csv  ex5_a_p45_b1_s1_r2.csv  ex5_a_p64_b1_s1_r2.csv  ex5_a_p8_b1_s1_r2.csv
project_skeleton/report/: report.aux  report.tex
project_skeleton/src/: Ex1.c  Ex1.h  Ex1_v2.cpp  Ex2.c  Ex2.h  Ex3.c  Ex4.c  Ex4.h  Ex4_old.c  Ex4_old.h  Ex5.c  Ex5.h  bench.c  bench.h  ex1.cpp  plot.py  plots.ipynb  test_ex1_queue.c  test_ex2_concurrent.c  test_ex4_twolocks.c  test_ex5_lockfree.c
project_skeleton/tests/: bench.c  test_ex1_queue.c  test_ex2_concurrent.c  test_ex4_twolocks.c  test_ex5_lockfree.c
